--- a/css/styles.css
+++ b/css/styles.css
@@ -68,3 +68,55 @@ li{
     background-color: #d1e2e9;
     overflow: hidden;
 }
+
+.nav{
+    padding: 1.6rem 0;
+}
+
+.navigation{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo h1{
+    font-size: 2.5rem;
+}
+
+.top-nav{
+    display: none;
+}
+
+.nav-list{
+    display: flex;
+    align-items: center;
+}
+
+.nav-item:not(:last-child){
+    margin-right: 0.5rem;
+}
+
+.nav-link:link,
+.nav-link:visited{
+    padding: 0.8rem 1rem;
+    transition: all 300ms ease-in-out;
+}
+
+.nav-link.icon{
+    font-size: 3rem;
+}
+
+.menu{
+    float: right;
+    top: 0;
+    position: absolute;
+    right: 0;
+}
+
+.hamburger{
+    display: none;
+}
+
+.cart-icon{
+    display: none;
+}
