--- a/css/styles.css
+++ b/css/styles.css
@@ -107,11 +107,9 @@ li{
     font-size: 3rem;
 }
 
-
-
-/* .menu-icon{
-    display: block;
-} */
+.menu-icon{
+    display: none;
+}
 
 .cart-icon{
     display: none;
@@ -121,7 +119,7 @@ li{
     .menu{
         position: fixed;
         top: 0;
-        left: 100%;
+        left: -100%;
         width: 80%;
         max-width: 40rem;
         height: 100%;
@@ -154,7 +152,7 @@ li{
     }
 
     .cart-icon{
-        display: none;
+        display: block;
         font-size: 3rem;
     }
 
@@ -165,10 +163,84 @@ li{
         cursor: pointer;
     }
 
-    .nav-link:link
+    .nav-list{
+        flex-direction: column;
+        align-items: start;
+        padding: 1rem 1.6rem;
+    }
+
+    .nav-link:link,
     .nav-link:visited{
         display: block;
         font-size: 1.7rem;
-        padding: 1rem 0;
+        padding: 1rem 0;    
     }
+
+    .nav.fixed-nav .nav-link{
+        color: #243a6f;
+    }
+
+    .nav-link .icon{
+        display: none;
+    }
+
+
+    body.show::before{
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: 4;
+    }
+
+    .nav.show{
+        background-color: rg;
+    }
+}
+
+.header .hero-img{
+    position: absolute;
+    bottom: -10%;
+    right: -5%;
+    height: 70rem;
+    object-fit: contain;
+}
+
+.hero-content{
+    position: absolute;
+    top: 50%;
+    transform: translate(25%, -50%);
+}
+
+.hero-content h2{
+    color: #b888ff;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+
+.hero-content .discount{
+    color: #fbb419;
+}
+
+.hero-content h1 span{
+    color: #253b70;
+    font-size: 6rem;
+    font-weight: 700;
+    display: block;
+    line-height: 1;
+    text-shadow: 3px 3px 0 #f1f1f1, 4px 4px 0 #f1f1f1;
+}
+
+.btn{
+    display: inline-block;
+    background-color: #fc7c7c;
+    padding: 1.2rem 4rem;
+    color: #fff;
+    font-weight:600;
+    text-transform: uppercase;
+    margin-top: 3rem
 }
