--- a/css/styles.css
+++ b/css/styles.css
@@ -402,8 +402,8 @@ li{
     gap: 7rem 3rem;
 }
 
-/* .product{
-    height: 48rem;
+.product{
+    height: 50rem;
     background-color: #fff;
     box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
     border-radius: 1rem;
@@ -413,4 +413,90 @@ li{
 
 .product:hover{
     box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.25);
-}  */
+} 
+
+.product-header{
+    position: relative;
+    background-color: #f6f2f1;
+    height: 35rem;
+    transition: all 300ms ease-in-out;
+    z-index: 0;
+}
+
+.product-header img{
+    height: 100%;
+}
+
+.product-footer{
+    padding: 2rem 1.6rem 1.6rem 1.6rem;
+}
+
+.product-footer h3{
+    font-size: 2.2rem;
+}
+
+.rating{
+    color: #43b3d9;
+}
+
+.product-footer .price{
+    color: #ff7c9c;
+    font-size: 2rem;
+}
+
+.product:hover .product-header::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    border-radius: 1rem 1rem 0 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    transition: all 500ms ease-in-out;
+}
+
+.product-header .icons{
+    position: absolute;
+    top: 50%;
+    right: 5%;
+    transform: translate(0, -50%) scale(0);
+    z-index: 2;
+    opacity: 0;
+    transition: all 500ms ease-in-out;
+}
+
+.product-header .icons span{
+    background-color: #fff;
+    font-size: 2.5rem;
+    display: block;
+    border-radius: 50%;
+    padding: 1.5rem 1.6rem;
+    line-height: 2rem;
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+}
+
+.product-header .icons span i{
+    transition: all 500ms ease-in-out;
+}
+
+.product-header .icons span:not(:last-child){
+    margin-bottom: 1rem;
+}
+
+.product-header .icons span:hover{
+    background: #ff7c9c;
+    color: #fff;
+}
+
+.product:hover .icons{
+    opacity: 1;
+    transform: translate(0, -50%) scale(1);
+}
+
+.product:hover .icons a{
+    display: block;
+    margin-bottom: 1rem;
+}
