--- a/css/styles.css
+++ b/css/styles.css
@@ -500,3 +500,145 @@ li{
     display: block;
     margin-bottom: 1rem;
 }
+
+.product-banner{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 50rem;
+    background-color: #243a6f;
+}
+
+.product-banner .left img{
+    object-fit: cover;
+    height: 100%;
+}
+
+.product-banner .right{
+    align-self: center;
+    text-align: center;
+    padding: 1.6rem;
+}
+
+.product-banner .content h2{
+    color: #fbb419;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+
+.product-banner .content .discount{
+    color: #b888ff;
+}
+
+.product-banner .content h1 span{
+    color: #fff;
+    font-size: 6rem;
+    font-weight: 700;
+    display: block;
+    line-height: 1;
+}
+
+@media only screen and (max-width: 996px){
+    .product-banner .content h1 span{
+        font-size: 5rem;
+    }
+}
+
+@media only screen and (max-width: 786px){
+    .product-banner{
+        grid-template-columns: 1fr;
+    }
+
+    .product-banner .left{
+        display: none;
+    }
+
+    .product-banner .content h1 span{
+        font-size: 4rem;
+    }
+
+    .product-banner .content h2{
+        font-size: 2rem;
+    }
+
+    .product-banner .content a{
+        padding: 1rem 3rem;
+    }
+}
+
+.testimonial-center{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 6rem;
+}
+
+.testimonial{
+    position: relative;
+    padding: 5rem;
+    background-color: #fff;
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
+    transition: all 300ms ease-in-out;
+    text-align: center;
+    border-radius: 0.5rem;
+}
+
+.testimonial:hover{
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.4);
+    transform: translate(-1rem);
+}
+
+.testimonial span{
+    position: absolute;
+    top: 2%;
+    left: 50%;
+    font-size: 12rem;
+    transform: translate(-50%, 0);
+    line-height: 1;
+    font-family: sans-serif;
+}
+
+.testimonial p{
+    margin: 2rem 0 1rem 0;
+}
+
+.testimonial .rating{
+    margin-bottom: 1rem;
+}
+
+.testimonial .img-cover{
+    border-radius: 50%;
+    width: 8rem;
+    height: 8rem;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+.testimonial .img-cover img{
+    height: 100%;
+    object-fit: cover;
+}
+
+.testimonial h4{
+    margin-top: 1rem;
+}
+
+.brands-center{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+}
+
+.brand{
+    height: 8rem;
+    width:  8rem;
+    margin: 0 auto;
+}
+
+.brand img{
+    object-fit: contain;
+}
+
+@media only screen and (max-width: 768px){
+    .brands-center{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
